karl package Changelog
======================

Unreleased
----------

- cico people import:  fixed the fix for singular 'website' element
  transform (LP #601205).

- tagging engine:  optimized 'getFrequency' (LP #597838).

- upload users view:  don't pass 'groups' to profile factory (LP #598246).

- portlet styles - cleaned up CSS for status message,
  applied new styles to profile tags portlet (LP #599522)

- general cleaning up of themedstyles.css for legibility
 * conformed way the code is laid out
 * fixed small errors

- Styled the site announcement to look like a status message. (LP #600765)

- Updated mailin code to respect X-Postoffice-Rejected headers coming from
  repoze.postoffice and special cased the bounce message when a message is
  rejected to due to vacation loop detection throttling. (LP #597835)

- hid the overflow on the main content area, so that when wide items are
  entered, the entire content area won't fall beneath the left menu in IE.
  (LP #576042)

3.36 (2010-06-27)
-----------------

- Fixed UI bug where actions in folder views did not correspond to user's
  permissions.  (LP #594180)

- Added evolve script to remove some broken objects that seem to be left over
  from the migration of profile photos to image drawer.  These were blocking
  reindexing of profiles.  (LP #594131)

- Fixed bug where profiles add via cico (OSI, using gsa_sync) were indexed with
  a bogus value for the 'allowed' index. Updated evolve script to reindex the
  people directory.  (LP #594131)

- Added stub for console script, reindex_peopledir.

- Fixed bug where 'home_path' was being clobbered by edit profile form.
  (LP #594127)

- Updated the rss feed update code to only update a feed if the upstream feed
  contains entries.  (LP #594352)

3.35 (2010-06-08)
-----------------

- Members views were not updated to use the new websites field after multiple
  websites change from 3.34, which caused an unexpected parameter error when